# curso-scrapy

./: README.md  memorias.json  movies.json  pyproject.toml  scrapy.cfg
adorocinema/: items.py  middlewares.py  pipelines.py  settings.py
adorocinema/spiders/: adorocinema.py  boadica.py  quotes.py
